fixed cypress tests failing due to canvas module version, using system node version

--- a/packages/eyes-cypress/.eslintignore
+++ b/packages/eyes-cypress/.eslintignore
@@ -3,4 +3,5 @@ packages/eyes-cypress/tests/fixtures/testApp/cypress/support
 packages/eyes-cypress/tests/fixtures/testApp/cypress/integration-run
 packages/eyes-cypress/tests/fixtures/testApp/cypress/integration-pack
 packages/eyes-cypress/tests/fixtures/testApp/cypress/integration-timeout
+packages/eyes-cypress/tests/fixtures/testApp/cypress/examples
 packages/eyes-cypress/tests/it/setup/fixtures/cypress/
