--- a/packages/eyes-cypress/package.json
+++ b/packages/eyes-cypress/package.json
@@ -7,7 +7,6 @@
     "eyes-setup": "./bin/eyes-setup.js"
   },
   "scripts": {
-    "release-pre-check": "bongo --release-pre-check",
     "render": "run(){ npx cypress run --config integrationFolder=tests/fixtures/testApp/cypress/render,pluginsFile=tests/fixtures/testApp/cypress/plugins/index-render.js,supportFile=tests/fixtures/testApp/cypress/support/index-run.js --env url=$1; }; run",
     "test:mocha": "mocha --no-timeouts 'tests/**/*.test.js'",
     "test:unit": "mocha --no-timeouts 'tests/unit/**/*.test.js'",
@@ -23,8 +22,8 @@
     "changelog": "git changelog -x -p -f v$npm_package_version > History.md && git add ./History.md && git commit -am 'changelog'",
     "changelog:init": "git config changelog.format \"* %s [[%h]($(echo $npm_package_repository_url|cut -d+ -f2|cut -d. -f1-2)/commit/%H)]\"",
     "changelog:install": "sudo apt-get install git-extras",
-    "preversion": "yarn release-pre-check",
-    "version": "git add CHANGELOG.md",
+    "preversion": "bongo --release-pre-check",
+    "version": "bongo --update-changelog && git add CHANGELOG.md",
     "postversion": "git push --follow-tags"
   },
   "files": [
