--- a/packages/eyes-webdriverio-4-service/package.json
+++ b/packages/eyes-webdriverio-4-service/package.json
@@ -8,6 +8,7 @@
   "main": "index.js",
   "scripts": {
     "release-pre-check": "bongo --release-pre-check",
+    "uc": "bongo --update-changelog",
     "test": "wdio test/wdio.conf.js",
     "preversion": "yarn release-pre-check",
     "version": "yarn uc && git add CHANGELOG.md",
