--- a/packages/eyes-webdriverio-5-service/package.json
+++ b/packages/eyes-webdriverio-5-service/package.json
@@ -35,6 +35,7 @@
   },
   "scripts": {
     "release-pre-check": "bongo --release-pre-check",
+    "uc": "bongo --update-changelog",
     "test": "wdio tests/wdio.conf.js",
     "preversion": "yarn release-pre-check",
     "version": "yarn uc && git add CHANGELOG.md",
