--- a/packages/eyes-images-legacy/package.json
+++ b/packages/eyes-images-legacy/package.json
@@ -56,6 +56,7 @@
   },
   "scripts": {
     "release-pre-check": "bongo --release-pre-check",
+    "uc": "bongo --update-changelog",
     "test": "npm run test:e2e",
     "test:e2e": "node test/simplerun.js",
     "build": "npm run browserify && npm run uglify",
