--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -60,6 +60,7 @@
   },
   "scripts": {
     "release-pre-check": "bongo --release-pre-check",
+    "uc": "bongo --update-changelog",
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "send-release-notification": "bongo --send-release-notification",
     "test": "yarn test:unit && yarn test:it",
