--- a/packages/sdk-release-kit/package.json
+++ b/packages/sdk-release-kit/package.json
@@ -20,7 +20,8 @@
     "type": "git",
     "url": "git+https://github.com/applitools/eyes.sdk.javascript1.git"
   }, "scripts": {
-    "test": "mocha test/**/*.spec.js"
+    "test": "mocha test/**/*.spec.js",
+    "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc"
   },
   "bugs": {
     "url": "https://github.com/applitools/eyes.sdk.javascript1/issues"
