--- a/packages/eyes-sdk-core-browser/package.json
+++ b/packages/eyes-sdk-core-browser/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@applitools/eyes-sdk-core-browser",
   "private": true,
-  "version": "4.7.0",
-  "description": "Applitools Eyes SDK for browser",
+  "version": "4.7.0", "description": "Applitools Eyes SDK for browser",
   "keywords": [
     "eyes-sdk-core",
     "applitools",
@@ -39,15 +38,13 @@
     "uglify-es": "^3.3.9"
   },
   "scripts": {
-    "release-pre-check": "bongo --release-pre-check",
-    "uc": "bongo --update-changelog",
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "browserify": "browserify index.js > dist/eyes-sdk-core.browser.js",
     "uglify": "uglifyjs dist/eyes-sdk-core.browser.js > dist/eyes-sdk-core.browser.min.js",
     "build": "npm run browserify && npm run uglify",
-    "preversion": "yarn release-pre-check",
-    "version": "yarn uc && git add CHANGELOG.md",
-    "postversion": "git push --follow-tags"
+    "preversion": "bongo preversion",
+    "version": "bongo version",
+    "postversion": "bongo postversion --skip-release-notification"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
