--- a/packages/eyes-webdriverio-4/package.json
+++ b/packages/eyes-webdriverio-4/package.json
@@ -4,18 +4,15 @@
   "description": "Applitools Eyes SDK for WebdriverIO",
   "main": "index.js",
   "scripts": {
-    "release-pre-check": "bongo --release-pre-check",
-    "uc": "bongo --update-changelog",
-    "send-release-notification": "bongo --send-release-notification",
     "lint": "eslint '**/*.js'",
     "test": "yarn test:unit && yarn test:it && yarn test:e2e",
     "test:e2e": "mocha --no-timeouts \"test/e2e/*.js\"",
     "test:it": "mocha --no-timeouts \"test/it/**/*.js\"",
     "test:unit": "mocha \"test/unit/**/*.js\"",
     "test:coverage": "coverage-tests run --path test/coverage/index.js --filterIndexes 0,1,6,7,8,9,10,11,13,16,17,18,22,25,27,28,29,30,31,32,33,34,35,36,37,39,40,41,42,60,61,64,67,73,78,79,80,85,86,97,98,103,104,109,110,114,118,119,121,122,124,125,127,128,129,130,131,137",
-    "preversion": "yarn release-pre-check && yarn test:coverage --send-report prod",
-    "version": "yarn uc && git add CHANGELOG.md",
-    "postversion": "git push --follow-tags && yarn send-release-notification"
+    "preversion": "bongo preversion && yarn test:coverage --send-report prod",
+    "version": "bongo version",
+    "postversion": "bongo postversion --skip-release-notification"
   },
   "author": "Applitools Team <team@applitools.com> (http://www.applitools.com/)",
   "license": "SEE LICENSE IN LICENSE",
