--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -50,9 +50,6 @@
     "shared-examples-for": "^0.1.3"
   },
   "scripts": {
-    "release-pre-check": "bongo --release-pre-check",
-    "uc": "bongo --update-changelog",
-    "send-release-notification": "bongo --send-release-notification",
     "lint": "eslint '**/*.js'",
     "test": "yarn test:unit && yarn test:e2e",
     "test:e2e": "mocha --no-timeouts \"test/+(TestClassicApi*.js|TestFluentApi*.js|TestVisualGrid*.js)\"",
@@ -62,9 +59,9 @@
     "test:coverage:custom": "mocha \"test/coverage/custom/**/*.spec.js\" --no-timeouts",
     "test:coverage:nuke": "coverage-tests nuke",
     "render": "node scripts/render.js",
-    "preversion": "yarn release-pre-check && yarn test:coverage --send-report prod",
-    "version": "yarn uc && git add CHANGELOG.md",
-    "postversion": "git push --follow-tags && yarn send-release-notification"
+    "preversion": "bongo preversion && yarn test:coverage --send-report prod",
+    "version": "bongo version",
+    "postversion": "bongo postversion"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
