--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -41,7 +41,7 @@
     "@applitools/visual-grid-client": "13.6.12"
   },
   "devDependencies": {
-    "@applitools/sdk-fake-eyes-server": "1.0.5",
+    "@applitools/sdk-fake-eyes-server": "1.1.1",
     "@applitools/sdk-release-kit": "0.1.0",
     "@applitools/sdk-test-kit": "1.0.17",
     "assert-rejects": "^1.0.0",
@@ -52,7 +52,8 @@
     "mocha": "^6.2.2",
     "mocha-parallel-tests": "^2.2.2",
     "node-fetch": "^2.6.0",
-    "selenium-webdriver": "^4.0.0-alpha.5"
+    "selenium-webdriver": "^4.0.0-alpha.5",
+    "yargs": "^15.3.1"
   },
   "peerDependencies": {
     "selenium-webdriver": "^4.0.0-alpha.5"
