--- a/packages/eyes-cypress/package.json
+++ b/packages/eyes-cypress/package.json
@@ -47,7 +47,7 @@
     "@applitools/functional-commons": "1.5.4",
     "@applitools/visual-grid-client": "13.6.11",
     "body-parser": "^1.19.0",
-    "chalk": "^2.4.2",
+    "chalk": "3.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "lodash.flatten": "^4.4.0"
