--- a/packages/eyes-storybook/package.json
+++ b/packages/eyes-storybook/package.json
@@ -60,7 +60,7 @@
     "@applitools/monitoring-commons": "1.0.19",
     "@applitools/visual-grid-client": "13.6.12",
     "boxen": "^4.2.0",
-    "chalk": "^2.4.2",
+    "chalk": "3.0.0",
     "detect-port": "^1.3.0",
     "lodash.flatten": "^4.4.0",
     "lodash.pick": "^4.4.0",
