--- a/packages/dom-snapshot/package.json
+++ b/packages/dom-snapshot/package.json
@@ -7,7 +7,7 @@
     "test:mocha": "mocha --no-timeouts tests/**/*.test.js",
     "eslint:node": "eslint '**/*.js' --ignore-pattern 'src/browser'",
     "eslint:browser": "eslint -c 'src/browser/.eslintrc.json' 'src/browser/**/*.js'",
-    "eslint": "yarn eslint:node && yarn eslint:browser",
+    "lint": "yarn eslint:node && yarn eslint:browser",
     "test": "yarn test:mocha && yarn eslint",
     "build": "rollup -c rollup.config.js",
     "build:watch": "rollup -c rollup.config.js --watch",
