--- a/packages/sdk-fake-eyes-server/package.json
+++ b/packages/sdk-fake-eyes-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/sdk-fake-eyes-server",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Fake eyes server",
   "author": {
     "name": "Applitools Team",
@@ -8,16 +8,20 @@
   },
   "homepage": "https://github.com/applitools/eyes.sdk.javascript1",
   "license": "SEE LICENSE IN LICENSE",
+  "bin": {
+    "fake-eyes-server": "./scripts/run-fake-eyes-server"
+  },
   "main": "lib/sdk-fake-eyes-server.js",
   "directories": {
     "lib": "lib",
     "test": "test"
   },
   "files": [
+    "scripts",
     "lib"
   ],
   "publishConfig": {
-    "access": "public"
+    "access": "restricted"
   },
   "repository": {
     "type": "git",
