--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -37,8 +37,8 @@
   "main": "./index.js",
   "dependencies": {
     "@applitools/dom-utils": "4.7.10",
-    "@applitools/eyes-sdk-core": "9.0.3",
-    "@applitools/visual-grid-client": "13.6.12"
+    "@applitools/eyes-sdk-core": "9.1.0",
+    "@applitools/visual-grid-client": "13.6.13"
   },
   "devDependencies": {
     "@applitools/sdk-fake-eyes-server": "^1.1.1",
@@ -51,6 +51,7 @@
     "chromedriver": "^80.0.0",
     "mocha": "^6.2.2",
     "mocha-parallel-tests": "^2.2.2",
+    "nock": "^12.0.3",
     "node-fetch": "^2.6.0",
     "selenium-webdriver": "^4.0.0-alpha.5",
     "yargs": "^15.3.1"
