--- a/packages/eyes-common-legacy/package.json
+++ b/packages/eyes-common-legacy/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "eyes.utils",
-  "version": "4.0.0",
+  "name": "@applitools/eyes-common-legacy",
+  "version": "1.0.0",
   "description": "General purpose Javascript utilities.",
   "keywords": [
     "eyes.utils",
