--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -39,7 +39,7 @@
     "webdriverio": "^5.18.6"
   },
   "devDependencies": {
-    "@applitools/sdk-fake-eyes-server": "1.1.1",
+    "@applitools/sdk-fake-eyes-server": "^1.1.1",
     "@applitools/sdk-release-kit": "0.1.0",
     "@applitools/sdk-test-kit": "1.0.17",
     "chromedriver": "^80.0.0",
