--- a/packages/eyes-sdk-core-legacy/package.json
+++ b/packages/eyes-sdk-core-legacy/package.json
@@ -39,7 +39,7 @@
   "main": "./index.js",
   "types": "./typings/index.d.ts",
   "dependencies": {
-    "eyes.utils": "4.0.0",
+    "@applitools/eyes-common-legacy": "1.0.1",
     "request": "^2.88.0"
   },
   "devDependencies": {
