--- a/packages/eyes-selenium-3/package.json
+++ b/packages/eyes-selenium-3/package.json
@@ -45,7 +45,7 @@
   "types": "./typings/index.d.ts",
   "dependencies": {
     "@applitools/eyes-common-legacy": "1.0.1",
-    "eyes.sdk": "5.0.0"
+    "@applitools/eyes-sdk-core-legacy": "1.0.0"
   },
   "devDependencies": {
     "@applitools/sdk-release-kit": "0.1.0",
