--- a/packages/eyes-webdriverio-4/package.json
+++ b/packages/eyes-webdriverio-4/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "lint": "eslint '**/*.js'",
     "test": "yarn test:unit && yarn test:it && yarn test:e2e",
+    "test:tmp": "mocha --no-timeouts test/coverage/custom/* # TEST AND REMOVE SCRIPT AFTER PR 151 MERGE !!",
     "test:e2e": "mocha --no-timeouts \"test/e2e/*.js\"",
     "test:it": "mocha --no-timeouts \"test/it/**/*.js\"",
     "test:unit": "mocha \"test/unit/**/*.js\"",
@@ -19,8 +20,8 @@
   "repository": "https://github.com/applitools/eyes.sdk.javascript1",
   "dependencies": {
     "@applitools/dom-utils": "4.7.10",
-    "@applitools/eyes-sdk-core": "9.0.3",
-    "@applitools/visual-grid-client": "13.6.12",
+    "@applitools/eyes-sdk-core": "9.1.1",
+    "@applitools/visual-grid-client": "13.6.14",
     "css": "2.2.4",
     "css-url-parser": "^1.1.3",
     "is-absolute-url": "^2.1.0",
