--- a/packages/sdk-fake-eyes-server/package.json
+++ b/packages/sdk-fake-eyes-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/sdk-fake-eyes-server",
-  "version": "1.1.3",
+  "version": "2.0.0",
   "description": "Fake eyes server",
   "author": {
     "name": "Applitools Team",
@@ -35,6 +35,9 @@
     "version": "bongo version",
     "postversion": "bongo postversion --skip-release-notification"
   },
+  "engines": {
+    "node": ">=8.9.0"
+  },
   "bugs": {
     "url": "https://github.com/applitools/eyes.sdk.javascript1/issues"
   },
@@ -43,7 +46,8 @@
     "filenamify": "^4.1.0",
     "node-fetch": "^2.6.0",
     "ua-parser-js": "^0.7.21",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "@applitools/sdk-release-kit": "0.1.0",
