--- a/packages/eyes-webdriverio-4/package.json
+++ b/packages/eyes-webdriverio-4/package.json
@@ -38,6 +38,7 @@
     "geckodriver": "^1.19.1",
     "mocha": "4.0.1",
     "mocha-parallel-tests": "^2.1.0",
+    "node-fetch": "^2.6.0",
     "shared-examples-for": "^0.1.3"
   },
   "engines": {
