--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -36,15 +36,15 @@
     "@applitools/eyes-sdk-core": "9.2.1",
     "@applitools/visual-grid-client": "13.7.2",
     "selenium-webdriver": "^4.0.0-alpha.5",
-    "webdriverio": "^5.18.6",
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1"
+    "webdriverio": "^5.18.6"
   },
   "devDependencies": {
     "@applitools/sdk-fake-eyes-server": "^2.0.0",
     "@applitools/sdk-release-kit": "0.1.0",
     "@applitools/sdk-test-kit": "1.0.17",
     "chromedriver": "^80.0.0",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^6.8.0",
     "geckodriver": "^1.19.1",
     "mocha": "^6.2.2",
@@ -60,7 +60,6 @@
     "test:coverage": "coverage-tests run --path test/coverage/index.js --filterIndexes 4,5,6,7,8,9,10,11,12,13,16,17,18,21,22,24,25,27,28,29,30,31,32,33,34,35,36,37,39,40,41,42,45,48,52,53,54,57,60,61,64,65,67,68,69,73,78,79,80,84,85,86,87,88,89,90,93,95,96,97,98,99,102,103,104,105,106,108,109,110,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,137",
     "test:coverage:custom": "mocha \"test/coverage/custom/**/*.spec.js\" --no-timeouts",
     "test:coverage:nuke": "coverage-tests nuke",
-    "test:coverage:custom": "mocha --no-timeouts \"test/coverage/custom/*.spec.js\"",
     "render": "node scripts/render.js",
     "preversion": "bongo preversion && yarn test:coverage --send-report prod",
     "version": "bongo version",
