added changelogs script

--- a/package.json
+++ b/package.json
@@ -31,10 +31,16 @@
       "packages/eyes-leanft",
       "packages/side-eyes"
     ],
-    "nohoist": ["**/@wdio/*", "**/wdio-*", "**/webdriverio"]
+    "nohoist": [
+      "**/@wdio/*",
+      "**/wdio-*",
+      "**/webdriverio"
+    ]
   },
   "scripts": {
-    "lint": "eslint --ext .js ."
+    "lint": "eslint --ext .js .",
+    "changelogs": "node scripts/changelogs.js",
+    "versions": "node scripts/versions.js"
   },
   "devDependencies": {
     "eslint": "^6.6.0",
@@ -43,6 +49,7 @@
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-prettier": "^3.1.1",
     "js-yaml": "^3.13.1",
+    "open": "^7.0.3",
     "prettier": "^1.18.2",
     "yargs": "^15.1.0"
   }
