changed versions script name

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "scripts": {
     "lint": "eslint --ext .js .",
     "changelogs": "node scripts/changelogs.js",
-    "versions": "node scripts/versions.js"
+    "versions-ls": "node scripts/versions.js"
   },
   "devDependencies": {
     "eslint": "^6.6.0",
