--- a/packages/eyes-webdriverio-4/package.json
+++ b/packages/eyes-webdriverio-4/package.json
@@ -11,11 +11,15 @@
     "test:e2e": "mocha --no-timeouts \"test/e2e/*.js\"",
     "test:it": "mocha --no-timeouts \"test/it/**/*.js\"",
     "test:unit": "mocha \"test/unit/**/*.js\"",
+    "coverage:sandbox": "coverage-tests create-tests && yarn test:coverage && coverage-tests process-report",
+    "coverage:prod": "coverage-tests create-tests && yarn test:coverage && coverage-tests process-report --send-report prod",
+    "test:coverage": "yarn start-chromedriver && env APPLITOOLS_BATCH_ID=uuidgen XUNIT_FILE=coverage-test-report.xml mocha-parallel-tests --no-timeouts --reporter spec-xunit-file --max-parallel 15 test/coverage/generic/*.spec.js",
     "test:coverage:custom": "mocha --no-timeouts ./test/coverage/custom/*.js",
-    "test:coverage": "coverage-tests run --path test/coverage/index.js --filterIndexes 0,1,3,4,6,7,8,9,10,11,13,14,18,20,22,23,25,26,27,28,29,30,31,32,33,34,35,36,37,39,40,41,42,45,48,51,52,53,60,61,64,65,67,68,71,73,78,79,80,85,86,87,90,93,95,97,98,99,102,103,104,105,106,107,109,110,112,113,114,115,116,118,119,121,122,124,125,127,128,129,130,131,135,136,137,138,139",
-    "preversion": "bongo preversion && yarn test:coverage --send-report prod",
+    "preversion": "bongo preversion && yarn coverage:prod",
     "version": "bongo version",
-    "postversion": "bongo postversion --skip-release-notification"
+    "postversion": "bongo postversion",
+    "start-chromedriver": "chromedriver --port=4444 --url-base=wd/hub --silent &",
+    "stop-chromedriver": "ps ax | grep chromedriver | grep port=4444 | awk '{print $1}' | xargs kill -9"
   },
   "author": "Applitools Team <team@applitools.com> (http://www.applitools.com/)",
   "license": "SEE LICENSE IN LICENSE",
@@ -33,14 +37,16 @@
   "devDependencies": {
     "@applitools/sdk-fake-eyes-server": "^2.0.0",
     "@applitools/sdk-release-kit": "0.1.0",
-    "@applitools/sdk-test-kit": "1.0.17",
-    "chromedriver": "^80.0.1",
+    "@applitools/sdk-coverage-tests": "1.0.0",
+    "chromedriver": "^81.0.0",
     "eslint": "^6.8.0",
     "geckodriver": "^1.19.1",
     "mocha": "4.0.1",
     "mocha-parallel-tests": "^2.1.0",
     "node-fetch": "^2.6.0",
-    "shared-examples-for": "^0.1.3"
+    "shared-examples-for": "^0.1.3",
+    "mocha-parallel-tests": "^2.2.2",
+    "spec-xunit-file": "0.0.1-3"
   },
   "engines": {
     "node": ">=8.9.0"
