eyes-selenium, testcafe, wdio4, wdio5 (ct): attempted fix for setting the batch id through a uuid created with uuidgen, passed as an env var. Appears to work through yarn, although seeing mixed results when attempting the same thing in certain shells (e.g., works in bash but not in fish).

--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -69,7 +69,7 @@
     "test:e2e": "mocha --no-timeouts \"test/e2e/**/*.spec.js\"",
     "coverage:sandbox": "coverage-tests create-tests && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "coverage-tests create-tests && yarn test:coverage && coverage-tests process-report --send-report prod",
-    "test:coverage": "env APPLITOOLS_BATCH_ID=uuidgen XUNIT_FILE=coverage-test-report.xml mocha-parallel-tests --no-timeouts --reporter spec-xunit-file --max-parallel 15 test/coverage/generic/*.spec.js",
+    "test:coverage": "env APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha-parallel-tests --no-timeouts --reporter spec-xunit-file --max-parallel 15 test/coverage/generic/*.spec.js",
     "test:coverage:custom": "mocha --no-timeouts \"test/coverage/custom/*.spec.js\"",
     "preversion": "bongo preversion && yarn coverage:prod",
     "version": "bongo version",
