--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -63,7 +63,7 @@
     "test:perf": "mocha --no-timeouts \"test/perf/**/*.spec.js\"",
     "coverage:sandbox": "coverage-tests create-tests && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "coverage-tests create-tests && yarn test:coverage && coverage-tests process-report --send-report prod",
-    "test:coverage": "env APPLITOOLS_BATCH_ID=$(uuidgen) testcafe chrome:headless test/coverage/generic --concurrency 15 --reporter spec,xunit:coverage-test-report.xml",
+    "test:coverage": "env  APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-testcafe' APPLITOOLS_BATCH_ID=$(uuidgen) testcafe chrome:headless test/coverage/generic --concurrency 15 --reporter spec,xunit:coverage-test-report.xml",
     "preversion": "bongo preversion && coverage:prod",
     "version": "bongo version",
     "postversion": "bongo postversion"
