--- a/packages/eyes-webdriverio-4/package.json
+++ b/packages/eyes-webdriverio-4/package.json
@@ -18,7 +18,7 @@
     "preversion": "bongo preversion && yarn coverage:prod",
     "version": "bongo version",
     "postversion": "bongo postversion",
-    "start-chromedriver": "chromedriver --port=4444 --url-base=wd/hub --silent &",
+    "start-chromedriver": "node scripts/start-chromedriver.js",
     "stop-chromedriver": "ps ax | grep chromedriver | grep port=4444 | awk '{print $1}' | xargs kill -9"
   },
   "author": "Applitools Team <team@applitools.com> (http://www.applitools.com/)",
