--- a/packages/eyes-webdriverio-4/package.json
+++ b/packages/eyes-webdriverio-4/package.json
@@ -11,6 +11,8 @@
     "test:e2e": "mocha --no-timeouts \"test/e2e/*.js\"",
     "test:it": "mocha --no-timeouts \"test/it/**/*.js\"",
     "test:unit": "mocha \"test/unit/**/*.js\"",
+    "tcg": "coverage-tests create-tests --all --remote=http://localhost:4444/wd/hub",
+    "tcr": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-webdriverio-4' APPLITOOLS_BATCH_ID=$(uuidgen) mocha-parallel-tests --no-timeouts --reporter list --max-parallel 15 test/coverage/generic/*.spec.js",
     "coverage:sandbox": "coverage-tests create-tests --remote=$CVG_TEST_REMOTE && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "coverage-tests create-tests --remote=$CVG_TEST_REMOTE && yarn test:coverage && coverage-tests process-report --send-report prod",
     "test:coverage": "yarn start-chromedriver && env APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-webdriverio-4' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha-parallel-tests --no-timeouts --reporter spec-xunit-file --max-parallel 15 test/coverage/generic/*.spec.js",
@@ -43,7 +45,6 @@
     "eslint": "^6.8.0",
     "geckodriver": "^1.19.1",
     "mocha": "4.0.1",
-    "mocha-parallel-tests": "^2.1.0",
     "node-fetch": "^2.6.0",
     "shared-examples-for": "^0.1.3",
     "mocha-parallel-tests": "^2.2.2",
