eyes-common: fixed device emulation names

--- a/packages/eyes-common/package.json
+++ b/packages/eyes-common/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@applitools/sdk-release-kit": "0.1.0",
+    "axios": "^0.19.2",
     "chai": "^4.2.0",
     "mocha": "^6.2.2"
   },
