--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/eyes-selenium",
-  "version": "4.35.0",
+  "version": "4.36.0",
   "description": "Applitools Eyes SDK for Selenium WebDriver",
   "keywords": [
     "eyes-selenium",
@@ -41,9 +41,9 @@
     "@applitools/visual-grid-client": "13.8.0"
   },
   "devDependencies": {
+    "@applitools/sdk-coverage-tests": "1.0.0",
     "@applitools/sdk-fake-eyes-server": "^2.0.0",
     "@applitools/sdk-release-kit": "0.1.0",
-    "@applitools/sdk-coverage-tests": "1.0.0",
     "assert-rejects": "^1.0.0",
     "axios": "^0.19.0",
     "chai": "^4.2.0",
@@ -54,8 +54,8 @@
     "nock": "^12.0.3",
     "node-fetch": "^2.6.0",
     "selenium-webdriver": "^4.0.0-alpha.5",
-    "yargs": "^15.3.1",
-    "spec-xunit-file": "0.0.1-3"
+    "spec-xunit-file": "0.0.1-3",
+    "yargs": "^15.3.1"
   },
   "peerDependencies": {
     "selenium-webdriver": "^4.0.0-alpha.5"
