--- a/packages/eyes-webdriverio-4/package.json
+++ b/packages/eyes-webdriverio-4/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/eyes.webdriverio",
-  "version": "2.14.0",
+  "version": "2.14.1",
   "description": "Applitools Eyes SDK for WebdriverIO",
   "main": "index.js",
   "scripts": {
@@ -15,7 +15,7 @@
     "coverage:prod": "coverage-tests create-tests --remote=$CVG_TEST_REMOTE && yarn test:coverage && coverage-tests process-report --send-report prod",
     "test:coverage": "yarn start-chromedriver && env APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-webdriverio-4' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha-parallel-tests --no-timeouts --reporter spec-xunit-file --max-parallel 15 test/coverage/generic/*.spec.js",
     "test:coverage:custom": "mocha --no-timeouts ./test/coverage/custom/*.js",
-    "preversion": "bongo preversion && yarn coverage:prod",
+    "preversion": "bongo preversion",
     "version": "bongo version",
     "postversion": "bongo postversion",
     "start-chromedriver": "node scripts/start-chromedriver.js",
@@ -36,9 +36,9 @@
     "webdriverio": "~4.14.4"
   },
   "devDependencies": {
+    "@applitools/sdk-coverage-tests": "1.0.0",
     "@applitools/sdk-fake-eyes-server": "^2.0.0",
     "@applitools/sdk-release-kit": "0.1.0",
-    "@applitools/sdk-coverage-tests": "1.0.0",
     "chromedriver": "^81.0.0",
     "eslint": "^6.8.0",
     "geckodriver": "^1.19.1",
