--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -37,8 +37,8 @@
   "main": "./index.js",
   "dependencies": {
     "@applitools/dom-utils": "4.7.16",
-    "@applitools/eyes-sdk-core": "10.1.1",
-    "@applitools/visual-grid-client": "13.8.0"
+    "@applitools/eyes-sdk-core": "10.1.2",
+    "@applitools/visual-grid-client": "13.8.1"
   },
   "devDependencies": {
     "@applitools/sdk-coverage-tests": "1.0.0",
@@ -49,6 +49,8 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chromedriver": "^80.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "mocha": "^6.2.2",
     "mocha-parallel-tests": "^2.2.2",
     "nock": "^12.0.3",
