--- a/packages/eyes-cypress/package.json
+++ b/packages/eyes-cypress/package.json
@@ -42,7 +42,7 @@
     "@applitools/dom-snapshot": "3.5.2",
     "@applitools/eyes-sdk-core": "10.1.2",
     "@applitools/functional-commons": "1.5.4",
-    "@applitools/visual-grid-client": "14.0.0",
+    "@applitools/visual-grid-client": "14.0.1",
     "body-parser": "^1.19.0",
     "chalk": "3.0.0",
     "cors": "^2.8.5",
@@ -64,6 +64,7 @@
     "morgan": "^1.9.1",
     "node-fetch": "^2.6.0",
     "node-notifier-cli": "^1.2.0",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "typescript": "^3.9.2"
   }
 }
