--- a/packages/visual-grid-client/package.json
+++ b/packages/visual-grid-client/package.json
@@ -61,6 +61,7 @@
     "nock": "^11.3.5",
     "node-fetch": "^2.6.0",
     "puppeteer": "^1.20.0",
+    "typescript": "^3.9.2",
     "ua-parser-js": "^0.7.20"
   },
   "scripts": {
