--- a/packages/eyes-selenium-3/package.json
+++ b/packages/eyes-selenium-3/package.json
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@applitools/sdk-release-kit": "0.1.0",
     "@types/node": "*",
+    "axios": "^0.19.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chromedriver": "^80.0.1",
