--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
       "packages/eyes-cypress",
       "packages/eyes-storybook",
       "packages/eyes-leanft",
-      "packages/side-eyes"
+      "packages/side-eyes",
+      "packages/sdk-shared"
     ],
     "nohoist": [
       "**/@wdio/*",
