eyes-storybook: added test to preversion

--- a/packages/eyes-storybook/package.json
+++ b/packages/eyes-storybook/package.json
@@ -34,7 +34,7 @@
     "changelog:init": "git config changelog.format \"* %s [[%h]($(echo $npm_package_repository_url|cut -d+ -f2|cut -d. -f1-2)/commit/%H)]\"",
     "changelog:install": "sudo apt-get install git-extras",
     "postinstall": "node src/postinstall",
-    "preversion": "bongo preversion",
+    "preversion": "bongo preversion && yarn test",
     "version": "bongo version",
     "postversion": "bongo postversion --skip-release-notification"
   },
