--- a/packages/dom-snapshot/package.json
+++ b/packages/dom-snapshot/package.json
@@ -63,7 +63,7 @@
     "whatwg-fetch": "^3.0.0"
   },
   "dependencies": {
-    "@applitools/functional-commons": "^1.5.4",
+    "@applitools/functional-commons": "1.5.4",
     "css-tree": "^1.0.0-alpha.39"
   }
 }
