--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -36,8 +36,8 @@
   },
   "main": "./index.js",
   "dependencies": {
-    "@applitools/eyes-sdk-core": "10.3.0",
-    "@applitools/visual-grid-client": "14.2.0"
+    "@applitools/eyes-sdk-core": "10.3.1",
+    "@applitools/visual-grid-client": "14.2.1"
   },
   "devDependencies": {
     "@applitools/sdk-coverage-tests": "1.0.0",
@@ -61,6 +61,8 @@
     "selenium-webdriver": "^4.0.0-alpha.5"
   },
   "scripts": {
+    "declaration:build": "rm -f index.d.ts && tsc -p tsconfig.json",
+    "build:types": "tsc --declaration --declarationDir dist/lib --declarationMap --emitDeclarationOnly",
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "render": "node scripts/render.js",
     "test": "yarn test:it",
