--- a/packages/eyes-sdk-core/package.json
+++ b/packages/eyes-sdk-core/package.json
@@ -30,6 +30,7 @@
     "test": "./test"
   },
   "main": "./index.js",
+  "types": "./typings/index.d.ts",
   "dependencies": {
     "@applitools/dom-capture": "7.2.4",
     "@applitools/isomorphic-fetch": "3.0.0",
@@ -53,7 +54,8 @@
     "chromedriver": "^83.0.0",
     "jsdoc": "3.6.4",
     "mocha": "7.0.1",
-    "selenium-webdriver": "^4.0.0-alpha.5"
+    "selenium-webdriver": "^4.0.0-alpha.5",
+    "typescript": "^3.9.3"
   },
   "browser": {
     "tunnel": false
@@ -63,6 +65,7 @@
     "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\"",
     "test:it": "mocha --no-timeouts \"test/it/**/*.spec.js\"",
+    "build:types": "tsc",
     "preversion": "bongo preversion && yarn test",
     "version": "bongo version",
     "postversion": "bongo postversion --skip-release-notification"
