--- a/packages/eyes-sdk-core/tsconfig.json
+++ b/packages/eyes-sdk-core/tsconfig.json
@@ -1,29 +1,11 @@
 {
   "compilerOptions": {
-    "outFile": "typings.d.ts",
-    "rootDir": "./lib",
-
-    "target": "es5",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "composite": true,
-
-    "allowJs": true,
+    "declarationDir": "typings",
     "declaration": true,
     "emitDeclarationOnly": true,
     "stripInternal": true,
-    "removeComments": true,
-
-    "strict": true,
-    "esModuleInterop": true,
-    "preserveConstEnums": true,
-    "forceConsistentCasingInFileNames": true
+    "removeComments": false,
+    "allowJs": true,
   },
-  "include": [
-    "./index.js",
-    "./lib/**/*.js"
-  ],
-  "exclude": [
-    "./lib/troubleshoot/*.js"
-  ],
+  "files": ["./index.js"]
 }
