WIP coverage tests

--- a/package.json
+++ b/package.json
@@ -34,7 +34,12 @@
     "nohoist": [
       "**/@wdio/*",
       "**/wdio-*",
-      "**/webdriverio"
+      "**/webdriverio",
+      "**/protractor",
+      "**/protractor/**",
+      "**/selenium-webdriver",
+      "**/selenium-webdriver-3",
+      "**/selenium-webdriver-4"
     ]
   },
   "scripts": {
